--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,22 @@
 <resources>
 
     <style name="Theme.SmartTravel" parent="android:Theme.Material.Light.NoActionBar" />
+    <!-- Base application theme. -->
+    <style name="Theme.MyApp" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <!-- Splash Screen Theme -->
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <!-- Set the splash screen background, animated icon, and animation duration. -->
+        <item name="windowSplashScreenBackground">@color/your_splash_background_color</item>
+
+        <!-- Use windowSplashScreenAnimatedIcon to add either a drawable or an
+             animated drawable. One of these is required. -->
+        <item name="windowSplashScreenAnimatedIcon">@drawable/your_logo_drawable</item>
+        <!-- Required for animated icons -->
+        <!-- <item name="windowSplashScreenAnimationDuration">1000</item> -->
+
+        <!-- Set the theme of the Activity that follows your splash screen. -->
+        <!-- This is required. -->
+        <item name="postSplashScreenTheme">@style/Theme.MyApp</item>
+    </style>
 </resources>
