--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,9 +9,9 @@
     <color name="white">#FFFFFFFF</color>
 
     <!-- App Colors -->
-    <color name="primaryOrange">#FF6900</color>
-    <color name="secondaryYellow">#F0B100</color>
-    <color name="accentBlue">#2B7FFF</color>
-    <color name="textLightGray">#B4B4B4</color>
+    <color name="primary">#FF6900</color>
+    <color name="secondary">#F0B100</color>
+    <color name="accent">#2B7FFF</color>
+    <color name="textLight">#B4B4B4</color>
     <color name="textDark">#000000</color>
 </resources>
